--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
 						</div>
 						<div class="col-12 col-md-6 text-center text-md-right">
 							<ul class="list-horizontal-unstyled">
-								<li><a href="Corporate-Classic.html#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="Corporate-Classic.html#"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="Corporate-Classic.html#"><i class="fab fa-pinterest"></i></a></li>
-								<li><a href="Corporate-Classic.html#"><i class="fab fa-instagram"></i></a></li>
+								<li><a href="https://www.facebook.com/cws.americas"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a href="https://twitter.com/AmericasCws"><i class="fab fa-twitter"></i></a></li>
+								<li><a href="https://www.linkedin.com/in/cws-americas-819035197/"><i class="fab fa-linkedin"></i></a></li>
+								<li><a href="https://www.instagram.com/cwsamericas/"><i class="fab fa-instagram"></i></a></li>
 							</ul>
 						</div>
 					</div><!-- end row -->
