--- a/wellbeing.html
+++ b/wellbeing.html
@@ -119,6 +119,7 @@
 					<div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
 						<h3>Personal Wellbeing</h3>
 						<p>Focused on the individual and the dynamics of his psychic life. Work to create higher levels of awareness about one's psychic life, taking into account the personal wellbeing and rituals of life that give it meaning.</p>
+						<iframe class="mt-5" width="560" height="315" src="https://www.youtube.com/embed/RFnbXFFEhLA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
@@ -189,10 +190,10 @@
 						</div>
 						<div class="col-12 col-md-6 text-center text-md-right">
 							<ul class="list-horizontal-unstyled">
-								<li><a href="Corporate-Classic.html#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="Corporate-Classic.html#"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="Corporate-Classic.html#"><i class="fab fa-pinterest"></i></a></li>
-								<li><a href="Corporate-Classic.html#"><i class="fab fa-instagram"></i></a></li>
+								<li><a href="https://www.facebook.com/cws.americas"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a href="https://twitter.com/AmericasCws"><i class="fab fa-twitter"></i></a></li>
+								<li><a href="https://www.linkedin.com/in/cws-americas-819035197/"><i class="fab fa-linkedin"></i></a></li>
+								<li><a href="https://www.instagram.com/cwsamericas/"><i class="fab fa-instagram"></i></a></li>
 							</ul>
 						</div>
 					</div><!-- end row -->
