--- a/wellbeing.html
+++ b/wellbeing.html
@@ -113,7 +113,7 @@
 		</header>
 
 		<!-- Services section 1 -->
-		<div class="section-lg" id="research">
+		<div class="section-lg" id="personal">
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
