adds covid19 form link

--- a/strategy.html
+++ b/strategy.html
@@ -179,6 +179,7 @@
 						<div class="col-12 col-md-6 col-lg-3">
 							<h6 class="heading-uppercase">Useful Links</h6>
 							<ul class="list-icon">
+								<li><a href="https://liao2512.typeform.com/to/qSI2k1">Emotional support in times of COVID19</a></li>
 								<li><a href="about-us.html">About us</a></li>
 								<li><a href="strategy.html">Our Strategy</a></li>
 								<li><a href="team.html">The Team</a></li>
